--- a/css/agency.css
+++ b/css/agency.css
@@ -104,7 +104,7 @@ img::-moz-selection {
 }
 
 .btn-primary:active, .btn-primary:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(254, 54, 54, 0.527) !important;
+  -webkit-box-shadow: 0intro 0 0 0.2rem rgba(254, 54, 54, 0.527) !important;
   box-shadow: 0 0 0 0.2rem rgba(254, 54, 54, 0.527)!important;
 }
 
@@ -174,21 +174,37 @@ img::-moz-selection {
 }
 
 header.masthead {
-  text-align: center;
-  color: white;
+  position: relative;
+  width: 100%;
+  height: auto;
+  min-height: 50rem;
+  padding: 0 15rem;
   background-image: url("../img/header-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
-  background-size: cover;
+  background-size: auto;
 }
 
-header.masthead .intro-text {
-  padding-top: 150px;
-  padding-bottom: 100px;
+header.althead {
+  position: relative;
+  width: 100%;
+  height: auto;
+  min-height: 50rem;
+  padding: 0 15rem;
+  background-image: url("../img/grey.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: auto;
 }
 
-header.masthead .intro-text .intro-lead-in {
+header.masthead .althead .intro-text {
+  padding-top: 400px;
+  padding-bottom: 0px;
+}
+
+header.masthead .intro-text .intro-lead-in .althead {
   font-size: 22px;
   font-style: italic;
   line-height: 22px;
@@ -196,7 +212,7 @@ header.masthead .intro-text .intro-lead-in {
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-header.masthead .intro-text .intro-heading {
+header.masthead .intro-text .intro-heading .althead{
   font-size: 50px;
   font-weight: 700;
   line-height: 50px;
@@ -205,18 +221,18 @@ header.masthead .intro-text .intro-heading {
 }
 
 @media (min-width: 768px) {
-  header.masthead .intro-text {
+  header.masthead .intro-text .althead {
     padding-top: 300px;
     padding-bottom: 200px;
   }
-  header.masthead .intro-text .intro-lead-in {
+  header.masthead .intro-text .intro-lead-in .althead {
     font-size: 40px;
     font-style: italic;
     line-height: 40px;
     margin-bottom: 25px;
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
-  header.masthead .intro-text .intro-heading {
+  header.masthead .intro-text .intro-heading .althead {
     font-size: 75px;
     font-weight: 700;
     line-height: 75px;
