--- a/css/agency.css
+++ b/css/agency.css
@@ -179,7 +179,7 @@ header.masthead {
   height: auto;
   min-height: 50rem;
   padding: 0 15rem;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("../img/banner_new.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
